# FakeCT

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
data/: cube.stl
examples/: demo_carotid.py  demo_carotid.sh  demo_cube.py  demo_cube.sh  demo_sphere.py  demo_sphere.sh
inputs/: example_cube.stl
src/: fakect.py
src/fakect/: cli.py  core.py  fill_parity.py  stenosis.py
tests/: cube_test.py  test_placeholder.py
tests/data/: cube.stl  sphere.stl
