[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakect"
version = "0.1.0"
description = "Synthetic CT and geometry voxelization toolkit"
authors = [{ name = "Arash Ghorbannia" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "trimesh",
    "scikit-image",
    "plotly",
    "dash"
]

[project.optional-dependencies]
vtk = ["vtk>=9.2", "vmtk>=1.5"]
dev = ["pytest", "pytest-cov", "black", "flake8", "isort"]

[project.scripts]
fakect = "fakect.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fakect = ["*.yaml"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --disable-warnings"
